--- a/PasswordGenerator/MainWindow.xaml
+++ b/PasswordGenerator/MainWindow.xaml
@@ -15,6 +15,68 @@
         </LinearGradientBrush>
     </Window.Background>
 
+    <Window.Resources>
+        <!--Оформление стиля кнопки закрытия-->
+        <Color x:Key="MouseLeaveCloseBtn" A="255" R="29" G="34" B="44"/>
+        <Color x:Key="MouseOverCloseBtn" A="255" R="212" G="11" B="11"/>
+        <SolidColorBrush x:Key="BorderBrushCloseButton" Color="#FF1D222C"/>
+
+        <Style TargetType="Button" x:Key="CloseButton">
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Width" Value="25"/>
+            <Setter Property="Height" Value="25"/>
+            <Setter Property="Background" Value="{x:Null}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border x:Name="TemplateBorder" RenderTransformOrigin="0.5,0.5"
+                                BorderBrush="{StaticResource BorderBrushCloseButton}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <Border.Background>
+                                <SolidColorBrush x:Name="BackgroundBorder" Color="{StaticResource MouseLeaveCloseBtn}"/>
+                            </Border.Background>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <MultiTrigger>
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="IsMouseOver" Value="True"/>
+                                    <Condition Property="IsEnabled" Value="True"/>
+                                </MultiTrigger.Conditions>
+                                <Setter Property="RenderTransform" TargetName="TemplateBorder">
+                                    <Setter.Value>
+                                        <TransformGroup>
+                                            <ScaleTransform ScaleX="1" ScaleY="1"/>
+                                        </TransformGroup>
+                                    </Setter.Value>
+                                </Setter>
+                                <MultiTrigger.EnterActions>
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <ColorAnimation Storyboard.TargetName="BackgroundBorder" 
+                                                            Storyboard.TargetProperty="Color"
+                                                            To="{StaticResource MouseOverCloseBtn}" 
+                                                            Duration="0:0:0.2"/>
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </MultiTrigger.EnterActions>
+                                <MultiTrigger.ExitActions>
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <ColorAnimation Storyboard.TargetName="BackgroundBorder"
+                                                            Storyboard.TargetProperty="Color"
+                                                            To="{StaticResource MouseLeaveCloseBtn}"
+                                                            Duration="0:0:0.2"/>
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </MultiTrigger.ExitActions>
+                            </MultiTrigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
@@ -22,13 +84,23 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
+            <Polygon Fill="White" Opacity="0.2" 
+                     Points="80,0,90,25,260,25,270,0"/>
             <TextBlock Text="Password Generator" FontSize="18" Foreground="White"
                        FontWeight="Bold" HorizontalAlignment="Center"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Height="25" Width="25" Content="-" BorderThickness="0"
-                        Background="{x:Null}" Foreground="White" FontSize="16" FontWeight="Bold"/>
-                <Button Height="25" Width="25" Content="X" BorderThickness="0"
-                        Background="{x:Null}" Foreground="White" FontSize="16" FontWeight="Bold"/>
+                <Button Height="25" Width="25" BorderThickness="0" Background="{x:Null}">
+                    <Image  Source="Assets/minus.png" Height="18" Width="18"/>
+                    <Button.ToolTip>
+                        <ToolTip Content="Свернуть" Placement="Mouse" />
+                    </Button.ToolTip>
+                </Button>
+                <Button Style="{StaticResource CloseButton}">
+                    <Image  Source="Assets/close.png" Height="18" Width="18"/>
+                    <Button.ToolTip>
+                        <ToolTip Content="Закрыть" Placement="Mouse" />
+                    </Button.ToolTip>
+                </Button>
             </StackPanel>
         </Grid>
 
