--- a/PasswordGenerator/MainWindow.xaml
+++ b/PasswordGenerator/MainWindow.xaml
@@ -32,9 +32,7 @@
 
         <Grid Grid.Row="0">
             <Polygon Fill="White" Opacity="0.2" 
-                     Points="80,0,90,25,260,25,270,0"/>
-            <TextBlock Text="Password Generator" FontSize="18" Foreground="White"
-                       FontWeight="Bold" HorizontalAlignment="Center"/>
+                     Points="80,0,90,7,260,7,270,0"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button x:Name="MinBtn" Style="{StaticResource StyleMinBtn}"
                         Click="MinBtn_Click">
@@ -56,9 +54,51 @@
         </Grid>
 
         <Grid Grid.Row="1">
-            
+            <TextBlock Text="Password Generator" FontSize="26" Foreground="White"
+                       FontWeight="Bold" HorizontalAlignment="Center"/>
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" 
+                        Height="55" VerticalAlignment="Top" Margin="0,70,0,0">
+                <TextBlock Text="Password length" FontSize="16" Foreground="White" 
+                           FontWeight="Bold" HorizontalAlignment="Center"/>
+                <StackPanel Orientation="Horizontal">
+                    <StackPanel Orientation="Horizontal">
+                        <RadioButton Margin="0,10,0,0"/>
+                        <TextBlock Text="8" Margin="5,5,0,0" FontSize="16" Foreground="White"
+                                   FontWeight="Bold"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="20,0,0,0">
+                        <RadioButton Margin="0,10,0,0"/>
+                        <TextBlock Text="10" Margin="5,5,0,0" FontSize="16" Foreground="White"
+                                   FontWeight="Bold"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="20,0,0,0">
+                        <RadioButton Margin="0,10,0,0"/>
+                        <TextBlock Text="12" Margin="5,5,0,0" FontSize="16" Foreground="White"
+                                   FontWeight="Bold"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="20,0,0,0">
+                        <RadioButton Margin="0,10,0,0"/>
+                        <TextBlock Text="16" Margin="5,5,0,0" FontSize="16" Foreground="White"
+                                   FontWeight="Bold"/>
+                    </StackPanel>
+                </StackPanel>
+            </StackPanel>
+
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,140,0,0">
+                <TextBlock Text="Generated password" FontSize="16" Foreground="White" 
+                           FontWeight="Bold" HorizontalAlignment="Center"/>
+                <TextBox Margin="0,10,0,0" FontSize="20" Width="210" IsReadOnly="True"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,25,0,0">
+                <Button Content="Generate" Height="40" Width="100" FontSize="16" 
+                       Foreground="White" Background="{x:Null}" BorderBrush="White"  BorderThickness="1"/>
+                <Button Content="Save" Height="40" Width="100" FontSize="16" 
+                        Foreground="White" Background="{x:Null}" BorderBrush="White" BorderThickness="1"  Margin="10,0,0,0"/>
+            </StackPanel>
+
         </Grid>
-        
+
     </Grid>
-    
+
 </Window>
