--- a/PasswordGenerator/MainWindow.xaml
+++ b/PasswordGenerator/MainWindow.xaml
@@ -20,6 +20,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles/StyleButtons.xaml"/>
+                <ResourceDictionary Source="Styles/StyleTextElements.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
@@ -54,40 +55,33 @@
         </Grid>
 
         <Grid Grid.Row="1">
-            <TextBlock Text="Password Generator" FontSize="26" Foreground="White"
-                       FontWeight="Bold" HorizontalAlignment="Center"/>
+            <TextBlock Text="Password Generator" Style="{StaticResource TextAppName}"/>
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center" 
                         Height="55" VerticalAlignment="Top" Margin="0,70,0,0">
-                <TextBlock Text="Password length" FontSize="16" Foreground="White" 
-                           FontWeight="Bold" HorizontalAlignment="Center"/>
+                <TextBlock Text="Password length" Style="{StaticResource HeadingPassowrdLength}"/>
                 <StackPanel Orientation="Horizontal">
                     <StackPanel Orientation="Horizontal">
                         <RadioButton Margin="0,10,0,0"/>
-                        <TextBlock Text="8" Margin="5,5,0,0" FontSize="16" Foreground="White"
-                                   FontWeight="Bold"/>
+                        <TextBlock Text="8" Style="{StaticResource CharactersPassword}"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="20,0,0,0">
                         <RadioButton Margin="0,10,0,0"/>
-                        <TextBlock Text="10" Margin="5,5,0,0" FontSize="16" Foreground="White"
-                                   FontWeight="Bold"/>
+                        <TextBlock Text="10" Style="{StaticResource CharactersPassword}"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="20,0,0,0">
                         <RadioButton Margin="0,10,0,0"/>
-                        <TextBlock Text="12" Margin="5,5,0,0" FontSize="16" Foreground="White"
-                                   FontWeight="Bold"/>
+                        <TextBlock Text="12" Style="{StaticResource CharactersPassword}"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="20,0,0,0">
                         <RadioButton Margin="0,10,0,0"/>
-                        <TextBlock Text="16" Margin="5,5,0,0" FontSize="16" Foreground="White"
-                                   FontWeight="Bold"/>
+                        <TextBlock Text="16" Style="{StaticResource CharactersPassword}"/>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
 
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,140,0,0">
-                <TextBlock Text="Generated password" FontSize="16" Foreground="White" 
-                           FontWeight="Bold" HorizontalAlignment="Center"/>
-                <TextBox Margin="0,10,0,0" FontSize="20" Width="210" IsReadOnly="True"/>
+                <TextBlock Text="Generated password" Style="{StaticResource HeadingGeneratedPassword}"/>
+                <TextBox Style="{StaticResource PasswordOutput}"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,25,0,0">
