--- a/PasswordGenerator/Styles/StyleButtons.xaml
+++ b/PasswordGenerator/Styles/StyleButtons.xaml
@@ -121,4 +121,72 @@
         </Setter>
     </Style>
 
+    <!--Styling the password generation button-->
+    <Color x:Key="MouseLeaveGenerateBtn" A="255" R="35" G="45" B="62"/>
+    <Color x:Key="MouseOverGenerateBtn" A="255" R="20" G="102" B="20"/>
+    <SolidColorBrush x:Key="BorderBrushGenerateBtn" Color="White"/>
+
+    <Style TargetType="Button" x:Key="GeneratePasswordButton">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Width" Value="100"/>
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="Background" Value="{x:Null}"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+
+                    <Border x:Name="TemplateBorder" RenderTransformOrigin="0.5,0.5" CornerRadius="4"
+                                BorderBrush="{StaticResource BorderBrushGenerateBtn}" BorderThickness="{TemplateBinding BorderThickness}">
+                        <Border.Background>
+                            <SolidColorBrush x:Name="BackgroundBorder" Color="{StaticResource MouseLeaveGenerateBtn}"/>
+                        </Border.Background>
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsMouseOver" Value="True"/>
+                                <Condition Property="IsEnabled" Value="True"/>
+                            </MultiTrigger.Conditions>
+                            <Setter Property="RenderTransform" TargetName="TemplateBorder">
+                                <Setter.Value>
+                                    <TransformGroup>
+                                        <ScaleTransform ScaleX="1.05" ScaleY="1.05"/>
+                                    </TransformGroup>
+                                </Setter.Value>
+                            </Setter>
+
+                            <MultiTrigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation Storyboard.TargetName="BackgroundBorder" 
+                                                            Storyboard.TargetProperty="Color"
+                                                            To="{StaticResource MouseOverGenerateBtn}" 
+                                                            Duration="0:0:0.2"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </MultiTrigger.EnterActions>
+
+                            <MultiTrigger.ExitActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation Storyboard.TargetName="BackgroundBorder"
+                                                            Storyboard.TargetProperty="Color"
+                                                            To="{StaticResource MouseLeaveGenerateBtn}"
+                                                            Duration="0:0:0.2"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </MultiTrigger.ExitActions>
+                        </MultiTrigger>
+
+                    </ControlTemplate.Triggers>
+
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
 </ResourceDictionary>
