--- a/PasswordGenerator/MainWindow.xaml
+++ b/PasswordGenerator/MainWindow.xaml
@@ -6,8 +6,10 @@
         xmlns:local="clr-namespace:PasswordGenerator"
         mc:Ignorable="d"
         x:Name="MainWin" MouseLeftButtonDown="MainWin_MouseLeftButtonDown"
-        Title="Password Generator" Height="500" Width="350" WindowStartupLocation="CenterScreen"
-        WindowStyle="None" ResizeMode="NoResize">
+        Title="Password Generator" 
+        Height="500" Width="350" 
+        ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="CenterScreen">
+
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="#FF1D222C" Offset="0"/>
@@ -15,7 +17,7 @@
             <GradientStop Color="#FF232D3E" Offset="0.543"/>
         </LinearGradientBrush>
     </Window.Background>
-
+    
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -85,8 +87,7 @@
 
             <StackPanel Style="{StaticResource AreaWorkButton}">
                 <Button Content="Generate" Style="{StaticResource GeneratePasswordButton}"/>
-                <Button Content="Save" Height="40" Width="100" FontSize="16" 
-                        Foreground="White" Background="{x:Null}" BorderBrush="White" BorderThickness="1"  Margin="10,0,0,0"/>
+                <Button Content="Save" Style="{StaticResource SavePasswordButton}"/>
             </StackPanel>
 
         </Grid>
