Adding an application exit command

--- a/PasswordGenerator/Views/GeneratorPassword.xaml
+++ b/PasswordGenerator/Views/GeneratorPassword.xaml
@@ -4,11 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PasswordGenerator.Views"
+        xmlns:vm="clr-namespace:PasswordGenerator.ViewModels"
         mc:Ignorable="d"
-        x:Name="MainWin" MouseLeftButtonDown="MainWin_MouseLeftButtonDown"
+        x:Name="MainWin"
         Title="Password Generator" 
         Height="500" Width="350" 
         ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="CenterScreen">
+    <Window.DataContext>
+        <vm:GeneratorPasswordViewModel/>
+    </Window.DataContext>
 
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -38,15 +42,13 @@
         <Grid Grid.Row="0">
             <Polygon Fill="White" Opacity="0.2" Points="80,0,90,7,260,7,270,0"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button x:Name="MinBtn" Style="{StaticResource StyleMinBtn}"
-                        Click="MinBtn_Click">
+                <Button Style="{StaticResource StyleMinBtn}">
                     <Image  Source="/Assets/minus.png" Height="18" Width="18"/>
                     <Button.ToolTip>
                         <ToolTip Content="Minimize" Style="{StaticResource HelpToolTipBtn}"/>
                     </Button.ToolTip>
                 </Button>
-                <Button x:Name="CloseBtn" Style="{StaticResource CloseButton}"
-                        Click="CloseBtn_Click">
+                <Button Command="{Binding CloseAppCommand}" Style="{StaticResource CloseButton}">
                     <Image  Source="/Assets/close.png" Height="18" Width="18"/>
                     <Button.ToolTip>
                         <ToolTip Content="Close" Style="{StaticResource HelpToolTipBtn}"/>
