--- a/PasswordGenerator/Views/GeneratorPassword.xaml
+++ b/PasswordGenerator/Views/GeneratorPassword.xaml
@@ -42,7 +42,7 @@
         <Grid Grid.Row="0">
             <Polygon Fill="White" Opacity="0.2" Points="80,0,90,7,260,7,270,0"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Style="{StaticResource StyleMinBtn}">
+                <Button Command="{Binding MinAppCommand}" Style="{StaticResource StyleMinBtn}">
                     <Image  Source="/Assets/minus.png" Height="18" Width="18"/>
                     <Button.ToolTip>
                         <ToolTip Content="Minimize" Style="{StaticResource HelpToolTipBtn}"/>
