Return the window drag method

--- a/PasswordGenerator/Views/GeneratorPassword.xaml
+++ b/PasswordGenerator/Views/GeneratorPassword.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PasswordGenerator.Views"
         xmlns:vm="clr-namespace:PasswordGenerator.ViewModels"
         mc:Ignorable="d"
-        x:Name="MainWin"
+        x:Name="MainWin" MouseLeftButtonDown="MainWin_MouseLeftButtonDown"
         Title="Password Generator" 
         Height="500" Width="350" 
         ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="CenterScreen">
