Adding drag and drop application command

--- a/PasswordGenerator/Views/GeneratorPassword.xaml
+++ b/PasswordGenerator/Views/GeneratorPassword.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PasswordGenerator.Views"
         xmlns:vm="clr-namespace:PasswordGenerator.ViewModels"
-        mc:Ignorable="d"
-        x:Name="MainWin" MouseLeftButtonDown="MainWin_MouseLeftButtonDown"
-        Title="Password Generator" 
-        Height="500" Width="350" 
+        mc:Ignorable="d" x:Name="MainWin"
+        Title="Password Generator" Height="500" Width="350" 
         ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="CenterScreen">
+    <Window.InputBindings>
+        <MouseBinding Command="{Binding DragDropAppCommand}" MouseAction="LeftClick"/>
+    </Window.InputBindings>
     <Window.DataContext>
         <vm:GeneratorPasswordViewModel/>
     </Window.DataContext>
