Adding an application version

--- a/PasswordGenerator/Views/GeneratorPassword.xaml
+++ b/PasswordGenerator/Views/GeneratorPassword.xaml
@@ -8,6 +8,7 @@
         mc:Ignorable="d" x:Name="MainWin"
         Title="Password Generator" Height="500" Width="350" 
         ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="CenterScreen">
+    
     <Window.InputBindings>
         <MouseBinding Command="{Binding DragDropAppCommand}" MouseAction="LeftClick"/>
     </Window.InputBindings>
@@ -38,6 +39,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="22"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -100,5 +102,9 @@
 
         </Grid>
 
+        <TextBlock Grid.Row="2" Text="Version: 1.1.0821" HorizontalAlignment="Center" 
+                   FontSize="14" Foreground="White"/>
+
     </Grid>
+    
 </Window>
